# mai-cg-labs

./: .gitignore  CMakeLists.txt  README.md  makefile
engine/: CMakeLists.txt
engine/lib/: camera.hpp  common.hpp  engine.hpp  light.hpp  model.hpp  shader.hpp
engine/src/: camera.cpp  light.cpp  model.cpp  shader.cpp
l1/: README.md  makefile
l1/lib/: button.hpp  matriciesop.hpp  model.hpp
l1/src/: button.cpp  main.cpp  model.cpp
l2/: CMakeLists.txt
l2/lib/: matricies.hpp  shaders.hpp
l2/shaders/: fs_pyramid.glsl  vs_pyramid.glsl
l2/src/: main.cpp
l3/: CMakeLists.txt
l3/shaders/: fs_colorful.glsl  fs_gray.glsl  fs_white.glsl  vs_object.glsl
l3/src/: main.cpp
l4/: CMakeLists.txt
l4/shaders/: fs_colorful.glsl  fs_light.glsl  vs_object.glsl
l4/src/: main.cpp
l5/: CMakeLists.txt
l5/src/: main.cpp
l6/: CMakeLists.txt
l6/lib/: model.hpp  shader.hpp
l6/shaders/: fs_dontcomeclose.glsl
l6/src/: main.cpp  model.cpp  shader.cpp
